Fixed spacing on buttons

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body {
 .button-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 2vh;
 }
 
